Fixed bottom horiz scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Ubuntu:ital,wght@1,700&display=swap');
 
-html, body {
-    height: 100vh;
+html, body, .app {
+    height: auto;
+    width: auto;
 }
