--- a/src/components/summary/Summary.module.css
+++ b/src/components/summary/Summary.module.css
@@ -6,5 +6,4 @@
 
 .picture {
     height: 20em;
-    border-radius: 0em;
 }
